@@ -13,6 +13,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.1-dev, SVN trunk):
 -------------------------------------
 
+- mapwms.c: add Cache-Control max-age HTTP header support (#2551)
+
 - mapogcsos.c: support URI encoded procedures correctly (#2547)
 
 - Added support for EMPTY template with WMS GetFeatureInfo (#546)
